cmake_minimum_required(VERSION 3.24)
project(LAB1_CUSTOMER)

set(CMAKE_CXX_STANDARD 17)

add_executable(LAB1_CUSTOMER date.cpp date.cpp customer.cpp customer.h sorting.cpp sorting.h linkedlist.h linkedlist.cpp array.h array.cpp orderArray.cpp orderLinkedList.h orderLinkedList.cpp BST.h BST.cpp test.cpp)
